Fix: Scrollbar disabled for all browsers

--- a/footerStyle.css
+++ b/footerStyle.css
@@ -67,6 +67,12 @@
 }
 
 :root::-webkit-scrollbar {
+  display: none;
+  width: 10px;
+}
+
+/*
+:root::-webkit-scrollbar {
     width: 10px;
   }
   
@@ -83,6 +89,7 @@
     background-color: #f1f1f1;
     border-radius: 5px;
   }
+*/
 
 
 
